--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
     "description": "App bootstrap for Orbisoft projects",
     "main": "index.js",
     "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1"
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "gulp": "gulp"
     },
     "keywords": [],
     "author": "Marcial Soto",
@@ -14,9 +15,9 @@
         "@fortawesome/fontawesome-free-brands": "^5.0.9",
         "@fortawesome/fontawesome-free-regular": "^5.0.9",
         "@fortawesome/fontawesome-free-solid": "^5.0.9",
-        "bootstrap": "^4.0.0",
-        "jquery": "^3.2.1",
-        "popper.js": "^1.12.9"
+        "bootstrap": "^4.0.1",
+        "jquery": "^3.3.1",
+        "popper.js": "~1.14.0"
     },
     "devDependencies": {
         "babel-core": "^6.26.0",
