--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
         "@fortawesome/fontawesome-free-solid": "^5.0.9",
         "bootstrap": "^4.0.1",
         "jquery": "^3.3.1",
-        "popper.js": "~1.14.0"
+        "popper.js": "~1.14.0",
+        "simplebar": "^2.6.1",
+        "toastr": "^2.1.4"
     },
     "devDependencies": {
         "babel-core": "^6.26.0",
