--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "devDependencies": {
         "babel-core": "^6.26.0",
         "babel-preset-es2015": "^6.24.1",
+        "babel-register": "^6.26.0",
         "babelify": "^8.0.0",
         "bloodhound-js": "^1.2.2",
         "browser-sync": "^2.23.5",
@@ -39,8 +40,10 @@
         "datatables.net-responsive": "^2.2.1",
         "datatables.net-responsive-bs4": "^2.2.1",
         "del": "^3.0.0",
-        "gulp": "^3.9.1",
+        "gulp": "^4.0.0",
         "gulp-autoprefixer": "^4.1.0",
+        "gulp-babel": "^7.0.1",
+        "gulp-clean-css": "^3.9.4",
         "gulp-concat": "^2.6.1",
         "gulp-cssnano": "^2.1.2",
         "gulp-imagemin": "^4.1.0",
@@ -52,7 +55,7 @@
         "gulp-postcss": "^7.0.1",
         "gulp-pug": "^3.3.0",
         "gulp-rename": "^1.2.2",
-        "gulp-sass": "^3.1.0",
+        "gulp-sass": "^4.0.1",
         "gulp-sequence": "^1.0.0",
         "gulp-sourcemaps": "^2.6.4",
         "gulp-uglify": "^3.0.0",
