--- a/package.json
+++ b/package.json
@@ -37,6 +37,8 @@
         "compass-mixins": "^0.12.10",
         "datatables.net": "^1.10.16",
         "datatables.net-bs4": "^1.10.16",
+        "datatables.net-buttons": "^1.5.3",
+        "datatables.net-buttons-bs4": "^1.5.3",
         "datatables.net-responsive": "^2.2.1",
         "datatables.net-responsive-bs4": "^2.2.1",
         "del": "^3.0.0",
@@ -65,6 +67,7 @@
         "hamburgers": "^0.9.3",
         "imagemin-pngquant": "^5.0.1",
         "jshint": "^2.9.5",
+        "pdfmake": "^0.1.37",
         "postcss-reporter": "^5.0.0",
         "postcss-scss": "^1.0.5",
         "stylelint": "^9.2.0",
