--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "flatpickr": "^4.5.0",
         "inputmask": "^3.3.11",
         "jquery": "^3.3.1",
+        "jquery-confirm": "^3.3.2",
         "popper.js": "~1.14.0",
         "simplebar": "^2.6.1",
         "toastr": "^2.1.4"
@@ -29,8 +30,8 @@
         "babel-preset-es2015": "^6.24.1",
         "babel-register": "^6.26.0",
         "babelify": "^8.0.0",
-        "bloodhound-js": "^1.2.2",
-        "browser-sync": "^2.23.5",
+        "bloodhound-js": "^1.2.3",
+        "browser-sync": "^2.24.6",
         "browserify": "^15.1.0",
         "browserify-shim": "^3.8.14",
         "chart.js": "^2.7.1",
@@ -68,7 +69,7 @@
         "gulplog": "^1.0.0",
         "hamburgers": "^0.9.3",
         "imagemin-pngquant": "^5.0.1",
-        "jshint": "^2.9.5",
+        "jshint": "^2.9.6",
         "pdfmake": "^0.1.37",
         "postcss-reporter": "^5.0.0",
         "postcss-scss": "^1.0.5",
