--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
         "hamburgers": "^0.9.3",
         "imagemin-pngquant": "^5.0.1",
         "jshint": "^2.9.6",
+        "jszip": "^3.1.5",
         "pdfmake": "^0.1.37",
         "postcss-reporter": "^5.0.0",
         "postcss-scss": "^1.0.5",
